[package]
name = "ascii_art_generator"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.10"
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0.102"
rand = { version = "0.10.1", features = ["thread_rng"] }

[profile.release]
opt-level = 3        # Full optimizations
lto = "fat"          # Link Time Optimization: enable full LTO
codegen-units = 1    # Reduce parallel code generation units for better optimization
panic = "abort"      # Abort on panic, removes unwinding code
strip = true         # Strip symbols from binary
debug = false        # Disable debug info